Tabela adicionada em about.html

--- a/about.html
+++ b/about.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
+<style>
+    table {
+        border: black 1px solid;
+        border-collapse: collapse;
+    }
+
+    th {
+        border: black 1px solid;
+    }
+
+    td {
+        border: black 1px solid;
+    }
+</style>
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,6 +38,66 @@
         <li>Saber mais sobre o personagem</li>
         <li>Traz mais afinidade com a cultura nerd</li>
     </ol>
+
+    <table>
+        <caption>Filmes do Homem-aranha</caption>
+
+        <thead>
+            <tr>
+                <th>Filme</th>
+                <th>Lançamento</th>
+                <th>Atores do Peter-Parker</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>Homem-aranha</td>
+                <td>2002</td>
+                <td>Tobey Maguire</td>
+            </tr>
+            <tr>
+                <td>Homem-aranha 2</td>
+                <td>2004</td>
+                <td>Tobey Maguire</td>
+            </tr>
+            <tr>
+                <td>Homem-aranha 3</td>
+                <td>2007</td>
+                <td>Tobey Maguire</td>
+            </tr>
+            <tr>
+                <td>O espetacular Homem-aranha</td>
+                <td>2012</td>
+                <td>Andrew Garfield</td>
+            </tr>
+            <tr>
+                <td>O espetacular Homem-aranha 2 - Ameaça de Electro</td>
+                <td>2014</td>
+                <td>Andrew Garfield</td>
+            </tr>
+            <tr>
+                <td>Homem-aranha : De volta ao lar</td>
+                <td>2017</td>
+                <td>Tom Holland</td>
+            </tr>
+            <tr>
+                <td>Homem-aranha : Longe de casa</td>
+                <td>2019</td>
+                <td>Tom Holland</td>
+            </tr>
+            <tr>
+                <td>Homem-aranha : Sem volta pra casa</td>
+                <td>2021</td>
+                <td>Tom Holland</td>
+            </tr>
+        <tfoot>
+            <tr>
+                <td colspan="3">Esta tabela esta com os filmes em ordem cronológica!</td>
+            </tr>
+        </tfoot>
+        </tbody>
+    </table>
 </body>
 
 </html>
