--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <title>O Homem-aranha: Um dos mais icônicos heróis da marvel</title>
 </head>
 
-<body>
+<body style="background-color: red;">
     <h1>O Homem-aranha: Um dos mais icônicos heróis da marvel</h1>
 
     <p>O Homem-aranha, também conhecido como spider-man, é um dos heróis mais icônicos da marvel comics. Criado por Stan
@@ -98,6 +98,7 @@
         </tfoot>
         </tbody>
     </table>
+    <a href="index.html">Clique aqui e volte para a página inicial</a>
 </body>
 
 </html>
