--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <p>O site tem como tema principal o super-herói da marvel Homem-aranha</p>
     <a href="about.html">Clique aqui para saber mais!</a>
 
+    <ul>
+        <li>História do super-herói</li>
+        <li>Tabela de filmes</li>
+        <li>Lista de vilões</li>
+    </ul>
+
 
 </body>
 
