--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <title>O Homem-aranha: Um dos mais icônicos heróis da marvel</title>
 </head>
 
-<body style="background-color: red;">
+<body style="background-color: azure">
     <h1>O Homem-aranha: Um dos mais icônicos heróis da marvel</h1>
 
     <p>O Homem-aranha, também conhecido como spider-man, é um dos heróis mais icônicos da marvel comics. Criado por Stan
