Adicionando nome, rm e turma

--- a/about.html
+++ b/about.html
@@ -99,6 +99,7 @@
         </tbody>
     </table>
     <a href="index.html">Clique aqui e volte para a página inicial</a>
+    <p>Nome:Júlia Kauane Menezes Farias RM:565568 Turma: 1TDSPV</p>
 </body>
 
 </html>
